Added Some basic docs for ideas on how the template language would work and also made refactored the template engine a bit with no functionality change

--- a/content/pages/articles.html
+++ b/content/pages/articles.html
@@ -2,8 +2,9 @@
 {{> header }}
 <main>
 <section id="home">
-    <h2>Why Performance Matters</h2>
-    <p>Cause I said so</p>
+      <div **for="var a in articles" > 
+         {{ a }} 
+      </div> 
 </section>
 {{> footer }}
 
