--- a/content/pages/404.html
+++ b/content/pages/404.html
@@ -1,4 +1,4 @@
-{{ header }} 
+{{> header }} 
 <body>
     <h1>404 - Page Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
@@ -8,4 +8,4 @@
         <a href="/">Go back to homepage</a>
     </div>
 </body>
-{{ footer }} 
+{{> footer }} 
