Added Logic to the parser

--- a/content/pages/articles.html
+++ b/content/pages/articles.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 {{> header }}
 <main>
-<section id="home">
-      <div **for="var a in articles" > 
-         {{ a }} 
-      </div> 
-</section>
+    <section id="home">
+        <div **for="var a in articles" > 
+            {{ a }} 
+        </div> 
+    </section>
+</main> 
 {{> footer }}
 
